Fix Recording Dropdown overflow (#4651)
* Fix Recording row dropdown overflow

* Add copied urls locale

* Remove unwanted changes

--- a/app/assets/stylesheets/recordings.scss
+++ b/app/assets/stylesheets/recordings.scss
@@ -20,10 +20,6 @@
     }
   }
 
-  .dropdown {
-    position: static;
-  }
-
   .dropdown-item {
     color: $muted;
     &:hover {
@@ -96,4 +92,14 @@
 
 .recordings-count-badge {
   background-color: whitesmoke !important;
+}
+
+.recordings-icons:first-child {
+  .dropdown-item:hover, .dropdown-item:focus {
+    background-color: transparent !important;
+  }
+
+  svg:hover {
+    color: var(--brand-color) !important;
+  }
 }
